# Chat-Application

./: CMakeLists.txt
src/client/: client.c  client_main.c
src/client/include/: client.h
src/server/: client_handler.c  server.c
src/server/include/: client_handler.h
